--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -20,7 +20,7 @@
         <item android:id="@+id/myaccount" android:title="My Account" />
         <item android:id="@+id/aboutus" android:title="About Us" />
         <item android:id="@+id/settings" android:title="Settings" />
-
+        <item android:id="@+id/logout" android:title="Logout" />
 
     </group>
 
