--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,12 @@
         <action
             android:id="@+id/action_home_to_PDFFragment"
             app:destination="@id/busTimePdf" />
+        <action
+            android:id="@+id/action_home_to_showSetReminderFragment"
+            app:destination="@id/reminder" />
+        <action
+            android:id="@+id/action_home_to_logoutFragment2"
+            app:destination="@id/logout" />
     </fragment>
     <fragment
         android:id="@id/buybuspass"
@@ -34,4 +40,14 @@
         android:name="com.example.busspass.PDFFragment"
         android:label="fragment_pdf"
         tools:layout="@layout/fragment_pdf" />
+    <fragment
+        android:id="@+id/reminder"
+        android:name="com.example.busspass.ShowSetReminderFragment"
+        android:label="fragment_show_set_reminder"
+        tools:layout="@layout/fragment_show_set_reminder" />
+    <fragment
+        android:id="@+id/logout"
+        android:name="com.example.busspass.LogoutFragment"
+        android:label="fragment_logout"
+        tools:layout="@layout/fragment_logout" />
 </navigation>
