--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,28 +14,31 @@
         android:src="@drawable/buspass2"
         android:layout_above="@+id/text_view"
         android:layout_marginBottom="180dp"
-        />
+        android:contentDescription="@string/todo1" />
+
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/loading"
-        android:layout_height="wrap_content"
-        android:text="@string/loading"
-        android:textSize="25dp"
-        android:textColor="@color/colorAccent"
-        android:layout_marginBottom="50dp"
-        android:layout_above="@id/progressBar"
-        android:layout_marginLeft="120dp"
-        />
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0%"
-        android:textSize="25sp"
-        android:textColor="@color/colorPrimary"
-        android:layout_above="@+id/progressBar"
+        android:layout_above="@id/progressBar"
+        android:layout_marginStart="120dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginLeft="240dp"
-        android:id="@+id/text_view"/>
+        android:fontFamily="monospace"
+        android:text="@string/loading"
+        android:textColor="#FF1B0F"
+        android:textSize="25sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/progressBar"
+        android:layout_marginStart="240dp"
+        android:layout_marginBottom="50dp"
+        android:text="@string/prog"
+        android:textColor="#000000"
+        android:textSize="25sp" />
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
