--- a/app/src/main/res/layout/fragment_buy_bus_pass.xml
+++ b/app/src/main/res/layout/fragment_buy_bus_pass.xml
@@ -140,7 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="sans-serif-black"
             android:text="@string/total_price_rs"
             />
