--- a/app/src/main/res/layout/fragment_buy_bus_pass.xml
+++ b/app/src/main/res/layout/fragment_buy_bus_pass.xml
@@ -1,179 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/background_light"
-    tools:context=".BuyBusPassFragment">
-
-
-
-    <ImageView
-        android:id="@+id/simpleImageView"
-        android:layout_width="fill_parent"
-        android:layout_height="190dp"
-        android:src="@drawable/bus2"
-        android:background="#000"/>
-
-        <TextView
-        android:layout_marginTop="20sp"
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/buy_bus_pass"
-        android:textSize="20sp"
-        />
-    <TextView
-        android:layout_marginTop="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/specify_quantity"
-        android:textSize="35sp"
-        android:textStyle="italic"
-        android:fontFamily="sans-serif-black"
-        android:layout_gravity="center"
-
-        />
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_marginTop="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        >
-        <Button
-            android:layout_width="50sp"
-            android:layout_height="wrap_content"
-            android:text="@string/minus"
-            android:textStyle="bold"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/minus"
-            android:textColor="@android:color/background_light"
-            android:onClick="doMinus"
-            android:lineHeight="@android:dimen/thumbnail_height"
-            android:background="@android:color/holo_red_light"
-            android:textSize="25sp"
-            ></Button>
-        <TextView
-            android:layout_width="40sp"
-            android:layout_height="wrap_content"
-            android:text="@string/busP_Count"
-            android:id="@+id/quantity"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:gravity="center"
-            />
-        <Button
-            android:layout_width="50sp"
-            android:layout_height="wrap_content"
-            android:text="@string/plus"
-            android:textColor="@android:color/background_light"
-            android:id="@+id/plus"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:onClick="doPlus"
-            android:background="@android:color/holo_red_light"
-            android:textSize="25sp"
-
-            />
-
-    </LinearLayout>
-    <TextView
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10sp"
-        android:text="@string/max_quantity_10"
-        android:textSize="20sp"
-        android:fontFamily="serif"
-        android:layout_marginBottom="10sp"
-        android:textColor="@android:color/holo_red_light"
-
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:textSize="30sp"
-            android:text="@string/total"
-            />
+        android:layout_width="300dp"
+        android:layout_height="600dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="60dp"
+        android:orientation="vertical"
+        android:background="@drawable/roundeda">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="sans-serif-black"
-            android:textSize="30sp"
-            android:text="@string/bus_pass"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:fontFamily="sans-serif-black"
-            android:id="@+id/total_pass"
-            android:text="@string/count"
-            />
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="sans-serif-black"
-            android:text="@string/total_price_rs"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:fontFamily="sans-serif-black"
-            android:id="@+id/total_price"
-            android:text="@string/cost"
-            />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:padding="10dp"
-            android:layout_marginBottom="0dp"
-            android:background="@android:color/holo_red_light"
-            android:gravity="center"
-            android:fontFamily="sans-serif-black"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+            android:text="Buy Bus Pass"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:textColor="@color/red"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/grey"
+            android:layout_margin="20dp"/>
+
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
+            android:text="Specific Quantity"
+            android:textSize="20sp"/>
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="40dp"
+                android:onClick="doMinus"
+                android:id="@+id/minus"
+                android:layout_marginLeft="30dp"
+                android:background="@drawable/ic_exposure_neg_1_black_24dp"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:id="@+id/quantity"
+                android:text="1"
+                android:textSize="30dp"
+                android:layout_marginLeft="10dp"/>
+
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:onClick="doPlus"
+                android:id="@+id/plus"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/ic_plus_one_black_24dp"/>
+
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="80dp"
+            android:text="Max Quantity: 10"
+            android:textSize="18sp"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv11"
+            android:layout_width="220dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="30dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="5dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Total"
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:id="@+id/total_pass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Total"
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Bus Pass"
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv12"
+            android:layout_width="220dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="30dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="5dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Total Price :"
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:id="@+id/total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="25"
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp"
             android:id="@+id/proceed_to_pay"
-            android:text="@string/proceed_to_pay"
+            android:layout_marginLeft="75dp"
+            android:background="@drawable/roundedb"
+            android:text="Proceed to pay" />
 
-            android:textColor="@android:color/background_light"
-            android:textSize="40sp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
+
