--- a/app/src/main/res/layout/fragment_select_day_place.xml
+++ b/app/src/main/res/layout/fragment_select_day_place.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -20,8 +19,8 @@
             android:layout_width="160dp"
             android:layout_height="80dp"
             android:layout_marginTop="35dp"
-            android:text="@string/set_reminder"
-            android:layout_marginStart="20dp"
+            android:text="Set Reminder"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/colorPrimaryDark" />
 
     </LinearLayout>
@@ -34,8 +33,8 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:text="@string/select_day"
-            android:layout_marginStart="20dp"/>
+            android:text="Select Day"
+            android:layout_marginLeft="20dp"/>
 
     </LinearLayout>
 
@@ -51,8 +50,8 @@
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:layout_marginTop="180dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/rounded">
 
 
@@ -66,9 +65,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/monday"
+                    android:text="Monday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -76,9 +75,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/tuesday"
+                    android:text="Tuesday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -86,9 +85,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/wednesday"
+                    android:text="Wednesday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -96,9 +95,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/thursday"
+                    android:text="Thursday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -106,9 +105,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/friday"
+                    android:text="Friday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -116,9 +115,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/saturday"
+                    android:text="Saturday"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -126,9 +125,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/sunday"
+                    android:text="Sunday"
                     android:textColor="#FF0000" />
 
             </LinearLayout>
@@ -137,11 +136,13 @@
 
         <TextView
             android:id="@+id/tv1"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_gravity="top"
-            android:layout_marginTop="190dp"
-            android:text="@string/select1"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="185dp"
+            android:text="Select"
+            android:textSize="15sp"
+            android:background="@drawable/round"
             />
 
     </LinearLayout>
@@ -154,8 +155,8 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:text="@string/select_arrival"
-            android:layout_marginStart="20dp"/>
+            android:text="Select Arrival"
+            android:layout_marginLeft="20dp"/>
 
     </LinearLayout>
 
@@ -170,8 +171,8 @@
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:layout_marginTop="180dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/rounded">
 
 
@@ -185,9 +186,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/ajmeri_gate1"
+                    android:text="Ajmeri gate"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -195,9 +196,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/lnmiit1"
+                    android:text="LNMIIT"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -205,9 +206,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/raja_park1"
+                    android:text="Raja park"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -215,9 +216,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/nai_ki_thadi1"
+                    android:text="Nai ki thadi"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -225,9 +226,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/chomu_puliya1"
+                    android:text="Chomu Puliya"
                     android:textColor="#FF0000" />
 
             </LinearLayout>
@@ -236,11 +237,13 @@
 
         <TextView
             android:id="@+id/tv2"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_gravity="top"
-            android:layout_marginTop="190dp"
-            android:text="@string/select1"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="185dp"
+            android:text="Select"
+            android:textSize="15sp"
+            android:background="@drawable/round"
             />
 
     </LinearLayout>
@@ -253,8 +256,8 @@
         <TextView
             android:layout_width="180dp"
             android:layout_height="40dp"
-            android:text="@string/select_destination"
-            android:layout_marginStart="20dp"/>
+            android:text="Select Destination"
+            android:layout_marginLeft="20dp"/>
 
     </LinearLayout>
 
@@ -269,9 +272,9 @@
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:layout_marginTop="180dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginRight="30dp"
             android:background="@drawable/rounded"
-            android:layout_marginStart="20dp">
+            android:layout_marginLeft="20dp">
 
 
             <LinearLayout
@@ -284,9 +287,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/ajmeri_gate1"
+                    android:text="Ajmeri gate"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -294,9 +297,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/lnmiit1"
+                    android:text="LNMIIT"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -304,9 +307,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/raja_park1"
+                    android:text="Raja park"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -314,9 +317,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/nai_ki_thadi1"
+                    android:text="Nai ki thadi"
                     android:textColor="#FF0000" />
 
                 <Button
@@ -324,9 +327,9 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:text="@string/chomu_puliya1"
+                    android:text="Chomu puliya"
                     android:textColor="#FF0000" />
 
             </LinearLayout>
@@ -335,23 +338,25 @@
 
         <TextView
             android:id="@+id/tv3"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_gravity="top"
-            android:layout_marginTop="190dp"
-            android:text="@string/select1"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="185dp"
+            android:text="Select"
+            android:textSize="15sp"
+            android:background="@drawable/round"
             />
 
     </LinearLayout>
 
     <Button
         android:id="@+id/btgo"
+        android:text="Proceed"
         android:layout_width="160dp"
         android:layout_height="60dp"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="520dp"
-        android:background="@drawable/rounded1"
-        android:text="@string/proceed1" />
+        android:layout_marginLeft="120dp"
+        android:background="@drawable/rounded1"/>
 
 
 </RelativeLayout>
