--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -9,6 +9,21 @@
         android:layout_width="match_parent"
         android:layout_height="210dp"
         android:layout_margin="10dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/showemail"
+        android:text="Hello This is email"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/showname"
+        android:text="Hello This is Name"/>
+</LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/buyPass"
