--- a/app/src/main/res/layout/fragment_buy_bus_pass.xml
+++ b/app/src/main/res/layout/fragment_buy_bus_pass.xml
@@ -33,13 +33,13 @@
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="40dp"
-            android:text="Specific Quantity"
+            android:text="Specify Quantity"
             android:textSize="20sp"/>
 
         <LinearLayout
             android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="50dp"
             android:orientation="horizontal">
 
@@ -47,7 +47,7 @@
             <Button
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="0dp"
                 android:onClick="doMinus"
                 android:id="@+id/minus"
                 android:layout_marginLeft="30dp"
@@ -56,21 +56,21 @@
             <TextView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="3dp"
                 android:gravity="center_horizontal"
                 android:background="@drawable/border"
                 android:id="@+id/quantity"
                 android:text="1"
 
-                android:textSize="28dp"
-                android:layout_marginLeft="10dp"/>
+                android:textSize="25dp"
+                android:layout_marginLeft="15dp"/>
 
             <Button
-                android:layout_width="40dp"
+                android:layout_width="45dp"
                 android:layout_height="40dp"
                 android:onClick="doPlus"
                 android:id="@+id/plus"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="0dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/plus"/>
 
@@ -171,16 +171,22 @@
 
         </androidx.cardview.widget.CardView>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_marginTop="40dp"
+    >
 
-        <Button
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="40dp"
-            android:id="@+id/proceed_to_pay"
-            android:layout_marginLeft="75dp"
-            android:background="@drawable/roundedb"
-            android:text="Proceed to pay" />
+    <Button
+        android:id="@+id/proceed_to_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
 
+        android:background="@drawable/roundedb"
+        android:text="    Proceed to pay   " />
+</LinearLayout>
 
     </LinearLayout>
 
