--- a/app/src/main/res/layout/fragment_select_day_place.xml
+++ b/app/src/main/res/layout/fragment_select_day_place.xml
@@ -52,6 +52,8 @@
             android:layout_marginTop="180dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="20dp"
+            android:paddingStart="13dp"
+            android:paddingEnd="13dp"
             android:background="@drawable/rounded">
 
 
@@ -140,7 +142,7 @@
             android:layout_height="30dp"
             android:gravity="center_horizontal"
             android:layout_marginTop="185dp"
-            android:text="Select"
+            android:text="hello"
             android:textSize="15sp"
             android:background="@drawable/round"
             />
@@ -173,6 +175,8 @@
             android:layout_marginTop="180dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="20dp"
+            android:paddingStart="13dp"
+            android:paddingEnd="13dp"
             android:background="@drawable/rounded">
 
 
@@ -241,7 +245,7 @@
             android:layout_height="30dp"
             android:gravity="center_horizontal"
             android:layout_marginTop="185dp"
-            android:text="Select"
+            android:text="hello"
             android:textSize="15sp"
             android:background="@drawable/round"
             />
@@ -273,6 +277,8 @@
             android:layout_height="40dp"
             android:layout_marginTop="180dp"
             android:layout_marginRight="30dp"
+            android:paddingStart="13dp"
+            android:paddingEnd="13dp"
             android:background="@drawable/rounded"
             android:layout_marginLeft="20dp">
 
@@ -342,7 +348,7 @@
             android:layout_height="30dp"
             android:gravity="center_horizontal"
             android:layout_marginTop="185dp"
-            android:text="Select"
+            android:text="hello"
             android:textSize="15sp"
             android:background="@drawable/round"
             />
